[package]
name = "stackprof_blame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
log = "0.4.17"
regex = "1.7.1"
serde_json = "1.0.94"
simple_logger = "4.0.0"
